Fixed scrollbar reappearing

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -31,7 +31,15 @@ html, body {
   --r5: #541928;
 }
 
-
+/* Make scrollbar invisible */
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
 
 /*  flex utility classes  */
 .flex { display: flex; }
